<resources>
    <string name="app_name">FridgeBro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="productimage">productimage</string>
    <string name="removeitem">removeitem</string>
    <string name="add_activity_title_new">Legg til ny vare</string>
    <string name="add_activity_title_edit">Endre vare</string>
    <string name="produkt">Produkt</string>
    <string name="utl_psdato">Utløpsdato</string>
    <string name="pris">Pris</string>
    <string name="fridgebro">FridgeBro</string>
    <string name="title_activity_barcode_scanner">BarcodeScanner</string>
    <string name="appicon">appicon</string>
    <string name="currency">%1$s kr</string>

    <string name="default_product_name">Produktnavn</string>
    <string name="default_price">0</string>
    <string name="default_barcode">5000112637397</string>

    <string name="no_internet_message">Du har ikke tilgang til internett. Endringer gjort uten internett vil ikke bli lagret.</string>


    <!-- drawer menu -->

    <string name="drawer_fridge">Fridge</string>
    <string name="drawer_shopping">Handleliste</string>

    <string name="drawer_lists">Lister</string>
    <string name="drawer_other">Annet</string>
    <string name="drawer_logout">Logg ut</string>
    <!--string name="drawer_fridge">Kjøleskap</string>
    <string name="drawer_shopping">Handleliste</string-->

    <!-- AddActivity string -->

    <string name="add_default_product_name">Produktnavn / strekkode</string>
    <string name="add_default_price">Pris</string>
    <string name="add_default_expdate">Utløpsdato</string>
    <string name="add_contentDesc_camera">Scan strekkode med kamera</string>
    <string name="add_contentDesc_search">Søk etter pris og produktinformasjon</string>
    <string name="add_contentDesc_date">Velg utløpsdato</string>
    <string name="add_contentDesc_info">Vis informasjon og hjelp</string>

    <!-- menu_buttons strings -->

    <string name="menu_button_search">Søk</string>
    <string name="menu_button_sortAlph">Sorter alfabetisk</string>
    <string name="menu_button_sortDate">Sorter etter dato</string>
    <string name="menu_button_moveToFridge">Flytt markert til kjøleskap</string>

    <string name="info_text">
        I denne aktiviteten kan du legge til eller endre varer i lista ved å skrive inn varenavn, pris (valgfritt) og velge utløpsdato.\n
        \nKnappen til høyre for tekstfeltet til varenavn er en søkeknapp som gjør det mulig å hente ut varer fra butikker i Norge.\n
        \nVelg dato ved å trykke på knappen vedsiden av datofeltet.
    </string>

    <string name="info_attribution">Innhold hentet med søk tilhører NorgesGruppen</string>

    <!-- MoveToFridge -->
    <string name="move_set_title">Sette dato?</string>
    <string name="move_set_message">%1$s du vil flytte til kjøleskap mangler dato. Vil du sette dato?</string>

</resources>