<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="no.hiof.fridgebro.activities.AddActivity">

    <EditText
        android:id="@+id/txtPrice"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="@string/add_default_price"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="382dp" />

    <EditText
        android:id="@+id/txtISBN"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="324dp"
        android:ems="10"
        android:hint="@string/add_default_product_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="55dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtISBN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtISBN"
        app:layout_constraintTop_toTopOf="@+id/txtISBN"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="getPriceFromNg"
        app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPrice"
        app:layout_constraintTop_toTopOf="@+id/txtPrice"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_search" />

    <ImageButton
        android:id="@+id/btnPickDate"
        android:layout_width="55dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="getPriceFromNg"
        app:layout_constraintBottom_toBottomOf="@+id/expDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expDate"
        app:layout_constraintTop_toTopOf="@+id/expDate"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_agenda" />

    <EditText
        android:id="@+id/expDate"
        android:layout_width="270dp"
        android:layout_height="42dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/add_default_expdate"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice"
        app:layout_constraintVertical_bias="1.0" />

    <!--TextView
        android:id="@+id/lblAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Antall"
        app:layout_constraintBottom_toBottomOf="@+id/editText5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText5"
        app:layout_constraintVertical_bias="1.0" /-->

    <!--EditText
        android:id="@+id/editText5"
        android:layout_width="111dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="numberSigned"
        android:text="1"
        app:layout_constraintStart_toEndOf="@+id/lblAmount"
        app:layout_constraintTop_toBottomOf="@+id/expDate" /-->

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="294dp"
        android:layout_height="163dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblProductName"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="337dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Lagre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgItem"
        app:layout_constraintVertical_bias="0.923" />

    <TextView
        android:id="@+id/lblProductName"
        android:layout_width="363dp"
        android:layout_height="31dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Produktnavn"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtISBN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>
